# agent-goal-backend

./: CLAUDE.md  Cargo.toml  README.md  config.toml  voice_app_api_contract.md  voice_app_backend_prd.md
src/: config.rs  device.rs  error.rs  health.rs  main.rs  state.rs  websocket.rs
src/audio/: buffer.rs  mod.rs  processor.rs  session.rs
src/handlers/: config.rs  debug.rs  mod.rs  models.rs
src/middleware/: logging.rs  metrics.rs  mod.rs
src/transcription/: engine.rs  mod.rs  model.rs  registry.rs
