[package]
name = "agent-notes-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-web-actors = "4.3"
actix-cors = "0.7"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
config = "0.14"
toml = "0.8"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures-util = "0.3"

# Audio processing and ML
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokenizers = "0.20"

# WebSocket support
tokio-tungstenite = "0.24"

# Audio format processing
byteorder = "1.5"
wav = "1.0"

# Additional async utilities
tokio-stream = "0.1"

# Multipart form handling
actix-multipart = "0.7"
